--- a/gradle.properties
+++ b/gradle.properties
@@ -27,11 +27,11 @@ mod_id=abverticaledition
 mod_version=1.0.0
 mod_license=All rights reserved
 mod_page=https://www.curseforge.com/minecraft/mc-mods/additional-blocks-vertical-edition
-mod_sources=https://github.com/SuperMartijn642
-mod_issues=https://github.com/SuperMartijn642/Entangled/issues
-mod_package=com.supermartijn642.fabrictemplate
-mod_main_class=FabricModTemplate
-maven_group=com.supermartijn642
+mod_sources=https://github.com/CiFru/AdditionalBlocksVerticalEdition
+mod_issues=https://github.com/CiFru/AdditionalBlocksVerticalEdition/issues
+mod_package=com.cifru.additionalblocks.vertical
+mod_main_class=AdditionalBlocks
+maven_group=com.cifru
 
 # Dependencies
 config_library_file=3871792
