--- a/gradle.properties
+++ b/gradle.properties
@@ -34,6 +34,8 @@ mod_main_class=AdditionalBlocks
 maven_group=com.cifru
 
 # Dependencies
+stone_edition_file=3935995
+stone_edition_dependency=[2.0.8,)
 config_library_file=3871792
 config_library_dependency=[1.1.6,)
 
