--- a/gradle.properties
+++ b/gradle.properties
@@ -32,6 +32,22 @@ mod_issues=https://github.com/CiFru/AdditionalBlocksVerticalEdition/issues
 mod_package=com.cifru.additionalblocks.vertical
 mod_main_class=AdditionalBlocks
 maven_group=com.cifru
+publish_file_name=AB: Vertical Edition
+
+
+# CurseForge
+curseforge_project_id=661058
+curseforge_release_type=release
+curseforge_game_versions=1.17 1.17.1
+curseforge_required_dependency_ids=
+curseforge_optional_dependency_ids=additional-blocks-stone-edition
+
+# Modrinth
+modrinth_project_id=additional-blocks-vertical-edition
+modrinth_release_type=release
+modrinth_game_versions=1.17 1.17.1
+modrinth_required_dependency_ids=
+modrinth_optional_dependency_ids=additional-blocks-stone-edition
 
 # Dependencies
 stone_edition_file=3921957
@@ -41,3 +57,4 @@ config_library_dependency=[1.1.6,)
 
 # Runtime mods
 just_enough_items_file=3596034
+
