--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.19.3
-minecraft_dependency=[1.19.3,1.20)
-minecraft_suffix=mc1.19.3
+minecraft_version=1.19.4
+minecraft_dependency=[1.19.4,1.20)
+minecraft_suffix=mc1.19.4
 java_target=17
 java_dependency=>=17
-resource_pack_format=9
+resource_pack_format=14
 
 # Forge
-forge_version=44.1.0
-forge_dependency=[44.1,)
-javafml_dependency=[44,)
+forge_version=45.0.6
+forge_dependency=[45,)
+javafml_dependency=[45,)
 
 # Mixin
 mixin_minimum_version=0.8
@@ -34,18 +34,17 @@ mod_main_class=AdditionalBlocks
 maven_group=com.cifru
 publish_file_name=AB: Vertical Edition
 
-
 # CurseForge
 curseforge_project_id=661058
 curseforge_release_type=release
-curseforge_game_versions=1.19 1.19.1 1.19.2
+curseforge_game_versions=1.19.4
 curseforge_required_dependency_ids=
 curseforge_optional_dependency_ids=additional-blocks-stone-edition
 
 # Modrinth
 modrinth_project_id=additional-blocks-vertical-edition
 modrinth_release_type=release
-modrinth_game_versions=1.19 1.19.1 1.19.2
+modrinth_game_versions=1.19.4
 modrinth_required_dependency_ids=
 modrinth_optional_dependency_ids=additional-blocks-stone-edition
 
