--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.19.4
-minecraft_dependency=>=1.19.4 <=1.20
-minecraft_suffix=mc1.19.4
+minecraft_version=1.20
+minecraft_dependency=>=1.20 <1.21
+minecraft_suffix=mc1.20
 java_target=17
 java_dependency=>=17
-resource_pack_format=14
+resource_pack_format=12
 
 # Fabric
-fabric_loader_version=0.14.19
+fabric_loader_version=0.14.21
 fabric_loader_dependency=>=0.14.0
-fabric_api_version=0.78.0+1.19.4
+fabric_api_version=0.83.0+1.20
 fabric_api_dependency=*
 
 # Mixin
@@ -39,14 +39,14 @@ publish_file_name=AB: Vertical Edition
 # CurseForge
 curseforge_project_id=661058
 curseforge_release_type=release
-curseforge_game_versions=1.19.4
+curseforge_game_versions=1.20
 curseforge_required_dependency_ids=
 curseforge_optional_dependency_ids=additional-blocks-stone-edition
 
 # Modrinth
 modrinth_project_id=additional-blocks-vertical-edition
 modrinth_release_type=release
-modrinth_game_versions=1.19.4
+modrinth_game_versions=1.20
 modrinth_required_dependency_ids=
 modrinth_optional_dependency_ids=additional-blocks-stone-edition
 
