--- a/build.gradle
+++ b/build.gradle
@@ -8,18 +8,15 @@ buildscript {
         classpath "org.spongepowered:mixingradle:0.7.+"
     }
 }
-
 plugins {
     id "com.matthewprenger.cursegradle" version "1.4.0"
     id "com.modrinth.minotaur" version "2.+"
 }
-
 apply plugin: "net.minecraftforge.gradle"
-// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: "eclipse"
 apply plugin: "org.spongepowered.mixin"
 
-version = project.mod_version + "-" + project.minecraft_suffix
+version = project.mod_version + "-forge-" + project.minecraft_suffix
 group = project.maven_group
 archivesBaseName = project.mod_id
 
@@ -28,6 +25,9 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(project.java_target)
 println("Java: " + System.getProperty("java.version") + " JVM: " + System.getProperty("java.vm.version") + "(" + System.getProperty("java.vendor") + ") Arch: " + System.getProperty("os.arch"))
 
 repositories {
+    flatDir {
+        dirs "libs"
+    }
     maven {
         url "https://www.cursemaven.com"
     }
@@ -39,9 +39,11 @@ dependencies {
 
     // Additional Blocks: Stone Edition
 //    runtimeOnly fg.deobf("curse.maven:additional-blocks-stone-edition-436715:${project.stone_edition_file}")
-
+    runtimeOnly fg.deobf("com.cifru:abstoneedition:2.1.0a-forge-mc1.20")
+    // Core library
+    runtimeOnly fg.deobf("curse.maven:supermartijn642s-core-lib-454372:${project.core_library_file}")
     // Config library
-    implementation fg.deobf("curse.maven:supermartijn642s-config-lib-438332:${project.config_library_file}")
+    runtimeOnly fg.deobf("curse.maven:supermartijn642s-config-lib-438332:${project.config_library_file}")
 
     // Just Enough Items
 //    runtimeOnly fg.deobf("curse.maven:jei-238222:${project.just_enough_items_file}")
@@ -56,6 +58,8 @@ processResources {
     filesMatching(["META-INF/mods.toml", "modid.mixins.json", "pack.mcmeta"]) {
         expand project.properties
     }
+
+    exclude "**/*.pdn"
 
     rename "^modid.mixins.json\$", "${project.mod_id}.mixins.json"
     rename "^icon.png\$", "${project.mod_id}.png"
@@ -134,13 +138,15 @@ curseforge {
         // Point to 'changelog' setting to a the changelog file
         changelog = file("changelog.md")
         changelogType = "markdown"
-        relations {
-            // Required dependencies
-            if (!project.curseforge_required_dependency_ids.isEmpty())
-                project.curseforge_required_dependency_ids.split(" ").each it::requiredDependency
-            // Optional dependencies
-            if (!project.curseforge_optional_dependency_ids.isEmpty())
-                project.curseforge_optional_dependency_ids.split(" ").each it::optionalDependency
+        if (!project.curseforge_required_dependency_ids.isEmpty() || !project.curseforge_optional_dependency_ids.isEmpty()) {
+            relations {
+                // Required dependencies
+                if (!project.curseforge_required_dependency_ids.isEmpty())
+                    project.curseforge_required_dependency_ids.split(" ").each it::requiredDependency
+                // Optional dependencies
+                if (!project.curseforge_optional_dependency_ids.isEmpty())
+                    project.curseforge_optional_dependency_ids.split(" ").each it::optionalDependency
+            }
         }
 
         mainArtifact(jar) {
@@ -172,13 +178,15 @@ modrinth {
     changelog = file("changelog.md").text
     uploadFile = jar // With Loom, this MUST be set to `remapJar` instead of `jar`!
     loaders = ["forge"]
-    dependencies {
-        // Required dependencies
-        if (!project.modrinth_required_dependency_ids.isEmpty())
-            project.modrinth_required_dependency_ids.split(" ").each required::project
-        // Optional dependencies
-        if (!project.modrinth_optional_dependency_ids.isEmpty())
-            project.modrinth_optional_dependency_ids.split(" ").each optional::project
+    if (!project.modrinth_required_dependency_ids.isEmpty() || !project.modrinth_optional_dependency_ids.isEmpty()) {
+        dependencies {
+            // Required dependencies
+            if (!project.modrinth_required_dependency_ids.isEmpty())
+                project.modrinth_required_dependency_ids.split(" ").each required::project
+            // Optional dependencies
+            if (!project.modrinth_optional_dependency_ids.isEmpty())
+                project.modrinth_optional_dependency_ids.split(" ").each optional::project
+        }
     }
 }
 
