--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@ mixin_compatibility_level=JAVA_17
 mod_name=Additional Blocks: Vertical Edition
 mod_description=Additional Blocks: Vertical Edition adds vertically oriented blocks to your game, which would traditionally be horizontally orientated!
 mod_id=abverticaledition
-mod_version=1.0.2
+mod_version=1.0.3
 mod_license=All rights reserved
 mod_page=https://www.curseforge.com/minecraft/mc-mods/additional-blocks-vertical-edition
 mod_sources=https://github.com/CiFru/AdditionalBlocksVerticalEdition
@@ -50,9 +50,11 @@ modrinth_optional_dependency_ids=additional-blocks-stone-edition
 
 # Dependencies
 stone_edition_file=4517281
-stone_edition_dependency=[2.1.0,)
-core_library_file=4548465
+stone_edition_dependency=[2.1.0a,)
 config_library_file=3871792
+config_library_dependency=[1.1.6,)
+core_library_file=4484241
+core_library_dependency=[1.1.0,1.2.0)
 
 # Runtime mods
 just_enough_items_file=3969039
