--- a/gradle.properties
+++ b/gradle.properties
@@ -39,14 +39,14 @@ publish_file_name=AB: Vertical Edition
 # CurseForge
 curseforge_project_id=661058
 curseforge_release_type=release
-curseforge_game_versions=1.20
+curseforge_game_versions=1.20 1.20.1
 curseforge_required_dependency_ids=
 curseforge_optional_dependency_ids=additional-blocks-stone-edition
 
 # Modrinth
 modrinth_project_id=additional-blocks-vertical-edition
 modrinth_release_type=release
-modrinth_game_versions=1.20
+modrinth_game_versions=1.20 1.20.1
 modrinth_required_dependency_ids=
 modrinth_optional_dependency_ids=additional-blocks-stone-edition
 
