Added mosaic bamboo, bambo wood and cherry wood

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.20
+minecraft_version=1.20.1
 minecraft_dependency=[1.20,1.21)
 minecraft_suffix=mc1.20
 java_target=17
@@ -11,9 +11,9 @@ java_dependency=>=17
 resource_pack_format=12
 
 # Forge
-forge_version=46.0.1
-forge_dependency=[46,)
-javafml_dependency=[46,)
+forge_version=47.0.3
+forge_dependency=[47,)
+javafml_dependency=[47,)
 
 # Mixin
 mixin_minimum_version=0.8
@@ -24,7 +24,7 @@ mixin_compatibility_level=JAVA_17
 mod_name=Additional Blocks: Vertical Edition
 mod_description=Additional Blocks: Vertical Edition adds vertically oriented blocks to your game, which would traditionally be horizontally orientated!
 mod_id=abverticaledition
-mod_version=1.0.3
+mod_version=1.0.3a
 mod_license=All rights reserved
 mod_page=https://www.curseforge.com/minecraft/mc-mods/additional-blocks-vertical-edition
 mod_sources=https://github.com/CiFru/AdditionalBlocksVerticalEdition
@@ -37,14 +37,14 @@ publish_file_name=AB: Vertical Edition
 # CurseForge
 curseforge_project_id=661058
 curseforge_release_type=release
-curseforge_game_versions=1.20
+curseforge_game_versions=1.20 1.20.1
 curseforge_required_dependency_ids=
 curseforge_optional_dependency_ids=additional-blocks-stone-edition
 
 # Modrinth
 modrinth_project_id=additional-blocks-vertical-edition
 modrinth_release_type=release
-modrinth_game_versions=1.20
+modrinth_game_versions=1.20 1.20.1
 modrinth_required_dependency_ids=
 modrinth_optional_dependency_ids=additional-blocks-stone-edition
 
