Added bugs where 3 slabs/stairs are missing

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ resource_pack_format=12
 # Fabric
 fabric_loader_version=0.14.21
 fabric_loader_dependency=>=0.14.0
-fabric_api_version=0.83.0+1.20
+fabric_api_version=0.83.1+1.20.1
 fabric_api_dependency=*
 
 # Mixin
@@ -25,7 +25,7 @@ mixin_compatibility_level=JAVA_17
 mod_name=Additional Blocks: Vertical Edition
 mod_description=Additional Blocks: Vertical Edition adds vertically oriented blocks to your game, which would traditionally be horizontally orientated!
 mod_id=abverticaledition
-mod_version=1.0.3a
+mod_version=1.0.3b
 mod_license=All rights reserved
 mod_page=https://www.curseforge.com/minecraft/mc-mods/additional-blocks-vertical-edition
 mod_sources=https://github.com/CiFru/AdditionalBlocksVerticalEdition
