--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     // Config library
     modRuntimeOnly "curse.maven:supermartijn642s-config-lib-438332:${project.config_library_file}"
 
+    // Core Library
+    modRuntimeOnly("curse.maven:supermartijn642s-core-lib-454372:${project.core_library_file}")
+
     // Just Enough Items
     modRuntimeOnly "curse.maven:jei-238222:${project.just_enough_items_file}"
 }
